--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -1,14 +1,14 @@
 {
   "dependencies": {
-    "com.unity.cinemachine": "2.6.4",
-    "com.unity.collab-proxy": "1.3.9",
-    "com.unity.ide.visualstudio": "2.0.7",
-    "com.unity.ide.vscode": "1.2.3",
-    "com.unity.postprocessing": "3.1.1",
-    "com.unity.test-framework": "1.1.24",
-    "com.unity.textmeshpro": "3.0.4",
-    "com.unity.timeline": "1.4.7",
-    "com.unity.toolchain.win-x86_64-linux-x86_64": "0.1.20-preview",
+    "com.unity.cinemachine": "2.8.9",
+    "com.unity.collab-proxy": "2.0.7",
+    "com.unity.ide.visualstudio": "2.0.18",
+    "com.unity.ide.vscode": "1.2.5",
+    "com.unity.postprocessing": "3.2.2",
+    "com.unity.test-framework": "1.1.33",
+    "com.unity.textmeshpro": "3.0.6",
+    "com.unity.timeline": "1.6.5",
+    "com.unity.toolchain.win-x86_64-linux-x86_64": "2.0.6",
     "com.unity.ugui": "1.0.0",
     "com.unity.modules.ai": "1.0.0",
     "com.unity.modules.androidjni": "1.0.0",
